# cardano-devs-plutus

./: .gitattributes  .gitignore  README.md  cabal copy.project  cabal.project  hie.yaml  shell.nix  smart-contracts.cabal
app/: Main-auto.hs  Main.hs  deploy-auto.hs  deploy-manual.hs  deploy-smart-contracts-manual.hs  pab-api-server-auto.hs  pab-api-server-manual.hs  pab-api-server.hs  pab-simulator.hs  trace-emulator.hs  utils-consByteString.hs  utils-payment-key-hash.hs  utils-stake-key-hash.hs
files/config/blockfrost/: blockfrost-mainnet.key
files/config/cardano-chain-index/: chain-index-config.TEMPLATE.json  chain-index-config.json  chain-index-config.old.json
files/config/pab/: pab-config.AlwaysFalse.yml  pab-config.AlwaysTrue.yml  pab-config.Deadline.yml  pab-config.Locker.yml  pab-config.Redeemer.yml  pab-config.TEMPLATE.yml
files/config/tx/: tip.slot
files/datums/: LOK.json  LOKmati.json  NEW1.json  datum (2).json  datum (3).json  datum-DEF3.json  datum-DEF977.json  datum-LOK2.json  datum1.json  datum55-3500001.json  datum7.json  lock2.json  locker232.json  new1.json
files/mintingpolicies/: NFT-NEW1.plutus  NFT-NEW3.plutus  NFT-NEW5.plutus  NFT-manu.plutus  NFT-manunftok.plutus  Plus-01plus.plutus  Plus-ALDEA.plutus  Plus-manu.plutus  Plus-manuplusok.plutus  Signed-01plus.plutus
files/pab/: plutus-pab-AlwaysTrue.db
files/redeemers/: locker454.json  manu.json  red3.json  redeemer-DEF1-4.json  redeemer-DEF111no.json  redeemer-DEF977.json  redeemer-DEF977ok.json  redeemerFile.json
files/stakePlus/: .json  31.json  invest-.json  invest-8q.json  invest-q.json  invest-u.json  invest-u1.json  invest-u2.json  invest-u3.json  invest-user.json  invest-w.json  pool.json  pool2.json  q.json  w.json
files/stakeSimple/: .json  pool.json
files/token-metadata/: tx-b75450d8dec1dbd65ae71a8f72715ad94f652ac4f60754b5e50bcf734d414e55.json  tx-c50a61e08d7222220197e254ff118a89162b51b06a6a14e34e7bc6dc414c444541.json  tx-d5cab55e8111b2a9bc7f97a74bfe83c04a3736f22b6f270354e339f4414c444541.json  tx-efc24eb77bd067fa1443d89e9fa9284d63c3c5ef21aec7280e6d790b414c444541.json
files/transacciones/: Free.signed  Locker.signed  LockerNEW2.body  NFT.signed  NFT.unsigned  Plus.signed  Plus.unsigned  Tokens.signed  Tokens.unsigned  sendTo.body  sendTo.signed
files/validators/: AlwaysFalse.addr  AlwaysTrue.utxo  Beneficiary.addr  Locker.addr  Locker.utxo
files/wallets/: 01.utxo  aldea.addr  aldea.addrs  aldea.id  aldea.json  aldea.pkh  aldea.prv  aldea.pub  aldea.root.prv  aldea.root.skey  aldea.skey  aldea.utxo  aldea.vkey  manu.addr  manu.pkh  manu.root.skey  manu.utxo  manu.vkey  manu1.id  manu1.json  manu1.pkh  manu1.prv  manu1.pub  manu1.root.prv  manu1.root.skey  manu1.skey  manu1.vkey  nami.addrs  nami.id  nami.json  nami.pkh  nami.prv  nami.pub  nami.utxo  nami.vkey
scripts/: balanceScript.sh  balanceWallet.sh  elegir_crear_Script.sh  elegir_crear_Wallet.sh  getutxo.sh  getutxoScript.sh  main.sh  main_datum_buscar_hash.sh  main_datum_calcular_hash.sh  main_datum_elegir_crear.sh  main_elegir_addr_wallet.sh  main_elegir_crear_script.sh  main_elegir_crear_wallet.sh  main_elegir_utxo_script.sh  main_elegir_utxo_wallet.sh  main_redeem_from_script.sh  main_send_to_script.sh  main_send_to_wallet.sh  main_ver_balance_wallet.sh  main_ver_utxo_wallet_all.sh  mint-token-free.sh  mint-token-nft.sh  mint-token-plus.sh  mint-token-signed.sh  redeemFromScript.sh  sendToScript.sh  sendToWallet.sh
scripts/_OLD/: 2.1.check-address-script.sh
scripts/_old/: 1.1.create-script-addr.sh  2.1.check-address-script.sh  2.2.check-address.sh  3.get-txo-of-wallet.sh  4.start-plazo-fijo.sh  5.1.get-new-txo-of-wallet.sh  5.2.get-txo-of-script.sh  6.get-plazo-fijo.sh
scripts/main/: main_datum_buscar_hash.sh  main_datum_calcular_hash.sh  main_datum_elegir_crear.sh  main_elegir_addr_wallet.sh  main_elegir_crear_script.sh  main_elegir_crear_wallet.sh  main_elegir_utxo_script.sh  main_elegir_utxo_wallet.sh  main_redeem_from_script.sh  main_send_to_script.sh  main_send_to_wallet.sh  main_ver_balance_script.sh  main_ver_balance_wallet.sh  main_ver_utxo_script.sh  main_ver_utxo_wallet.sh  main_ver_utxo_wallet_all.sh
scripts/mint/: mint-free.sh  mint-nft.sh  mint-signed.sh  mint-token-free.sh  mint-token-nft.sh  mint-token-plus.sh  mint-token-signed.sh  mint-tokens.sh  mint.sh  token-metadata-creator.sh
scripts/otros/: check-cardano-node.sh  create-wallet-con-cardano-cli.sh  create-wallet-con-cardano-wallet.sh  fix-permisos.sh  init-cardano-node.sh  init-cardano-wallet-server.sh  init-playground-client.sh  init-playground-server.sh  init-plutus-docs.sh  load-wallet-con-cardano-wallet.sh
scripts/pab/: pab.sh  pab_elegir_validador.sh  pab_init_database.sh  pab_init_server.sh  pab_send_to_script.sh
scripts/tools/: cardano-node-check.sh  fix-permisos-cabal.sh  fix-permisos.sh  init-cardano-node.sh  init-cardano-wallet-server.sh  init-chain-index-server.sh  init-nix-shell.sh  init-playground-client.sh  init-playground-server.sh  init-plutus-docs.sh  tools.sh  wallet-create-con-cardano-wallet-desde-json.sh  wallet-create-con-cardano-wallet.sh  wallet-load-con-cardano-wallet-desde-json.sh  write-env-list-mainnet.sh  write-env-list-testnet.sh  write-env-list.sh  write-env-mainnet.sh  write-env-testnet.sh  write-env.sh
src/: Deploy.hs  MintPolicyFree.hs  MintPolicyNFT.hs  MintPolicyPlus.hs  MintPolicySigned.hs  TestWithPABSimulator.hs  TestWithTraceEmulator.hs  Utils.hs  ValidatorAlwaysFalse.hs  ValidatorAlwaysTrue.hs  ValidatorBeneficiary.hs  ValidatorDeadline.hs  ValidatorLocker.hs  ValidatorRedeemer.hs  ValidatorStake.hs
src/MintingPolicies/: Free.hs  FreeV1.hs  NFT.hs  NFTSignedV1.hs  NFTV1.hs  Plus.hs  Signed.hs  SignedV1.hs  TokensSignedV1.hs  TokensV1.hs
src/Validators/: AlwaysFalse.hs  AlwaysFalseV1.hs  AlwaysTrue.hs  AlwaysTrueV1.hs  Beneficiary.hs  BeneficiaryV1.hs  Deadline.hs  DeadlineV1.hs  Locker.hs  LockerV1.hs  MarketNFT.hs  MarketNFTV1.hs  Redeemer.hs  RedeemerV1.hs  StakePlus.hs  StakePlusV1.hs  StakeSimple.hs  StakeSimpleV1.hs  ValidatorStake.hs
src/_OLD/: pab-simulator.hs
test/: Spec.hs
(+259 files in other folders)
