cabal-version:      2.4
Name:               smart-contracts
Version:            0.1.0.0
Author:              Manuel Padilla
Maintainer:          manuelpad@gmail.com
Build-Type:          Simple
Copyright:           © 2022 Manuel Padilla
License:             Apache-2.0
License-files:       LICENSE

library
  hs-source-dirs:      src
  exposed-modules:     Deploy
                     , Validators.Locker
                     , Validators.Locker.OffChain
                     , Validators.Locker.OnChain
                     , Validators.Locker.PAB
                     , Validators.Locker.Test
                     , Validators.Locker.Typos
                     , Validators.AlwaysTrue
                     , Validators.AlwaysTrue.OffChain
                     , Validators.AlwaysTrue.OnChain
                     , Validators.AlwaysTrue.PAB
                     , Validators.AlwaysTrue.Test
                     , Validators.AlwaysTrue.Typos
                     , Validators.AlwaysFalse
                     , Validators.AlwaysFalse.OffChain
                     , Validators.AlwaysFalse.OnChain
                     , Validators.AlwaysFalse.PAB
                     , Validators.AlwaysFalse.Test
                     , Validators.AlwaysFalse.Typos
                     , Validators.Beneficiary
                     , Validators.Beneficiary.OffChain
                     , Validators.Beneficiary.OnChain
                     , Validators.Beneficiary.PAB
                     , Validators.Beneficiary.Test
                     , Validators.Beneficiary.Typos
                     , Validators.Deadline
                     , Validators.Deadline.OffChain
                     , Validators.Deadline.OnChain
                     , Validators.Deadline.PAB
                     , Validators.Deadline.Test
                     , Validators.Deadline.Typos

                     , Validators.MarketNFT
                     , Validators.MarketNFT.OffChain
                     , Validators.MarketNFT.OnChain
                     , Validators.MarketNFT.OnChainNFT
                     , Validators.MarketNFT.PAB
                     , Validators.MarketNFT.TestWithEmulator
                     , Validators.MarketNFT.TestWithPABSimulator
                     , Validators.MarketNFT.Typos
                     , Validators.MarketNFT.OnChainHelpers
                     , Validators.MarketNFT.OffChainHelpers
                     , Validators.MarketNFT.Helpers

                     , Validators.Redeemer
                     , Validators.Redeemer.OffChain
                     , Validators.Redeemer.OnChain
                     , Validators.Redeemer.PAB
                     , Validators.Redeemer.Test
                     , Validators.Redeemer.Typos
                     , Validators.StakeSimple
                     , Validators.StakeSimple.OffChain
                     , Validators.StakeSimple.OnChain
                     , Validators.StakeSimple.OnChainNFT
                     , Validators.StakeSimple.PAB
                     , Validators.StakeSimple.TestWithEmulator
                     , Validators.StakeSimple.TestWithPABSimulator
                     , Validators.StakeSimple.Typos
                     , Validators.StakeSimple.OnChainHelpers
                     , Validators.StakeSimple.OffChainHelpers
                     , Validators.StakeSimple.Helpers

                     , Validators.StakePlus
                     , Validators.StakePlus.OffChain
                     , Validators.StakePlus.OnChain
                     , Validators.StakePlus.OnChainNFT
                     , Validators.StakePlus.PAB
                     , Validators.StakePlus.TestWithEmulator
                     , Validators.StakePlus.TestWithPABSimulator
                     , Validators.StakePlus.Typos
                     , Validators.StakePlus.OnChainHelpers
                     , Validators.StakePlus.OffChainHelpers
                     , Validators.StakePlus.Helpers


                     , MintingPolicies.Free
                     , MintingPolicies.NFT
                     , MintingPolicies.Plus
                     , MintingPolicies.Signed
                     , Utils

  --------------------
  -- IOG dependencies
  --------------------
  build-depends:
                       cardano-api
                     , cardano-crypto-class
                     , cardano-ledger-core
                     , cardano-ledger-shelley
                     , cardano-wallet-core
                     , data-default
                     , playground-common
                     -- , plutus-chain-index-core
                     , plutus-contract
                     -- , plutus-core
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-ledger-constraints
                     --, plutus-script-utils
                     , plutus-pab
                     , plutus-use-cases
                     , plutus-tx
                     , plutus-tx-plugin      

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
                       aeson
                     , base >= 4.9 && < 5
                     , bytestring
                     , containers
                     , freer-extras
                     , freer-simple
                     -- , hashable
                     , lens
                     , openapi3
                     , prettyprinter
                     -- , semigroups
                     , serialise
                     -- , streaming
                     -- , template-haskell
                     , text
                     , stm 
                     , old-locale
                     , time
                     , directory
                     , MissingH
                    --  , stm , time, old-locale,directory  en test2
                    
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

executable deploy-smart-contracts-manual
  main-is: deploy-smart-contracts-manual.hs
  hs-source-dirs:
      app
  build-depends:
      base ^>=4.14.1.0,
      smart-contracts
  default-language: Haskell2010

executable deploy-smart-contracts-auto
  main-is: deploy-smart-contracts-auto.hs
  hs-source-dirs:
      app
  build-depends:
      base ^>=4.14.1.0,
      smart-contracts
  default-language: Haskell2010


executable utils-token-name
  main-is: utils-token-name.hs
  hs-source-dirs:      app
  ghc-options:         -Wall
  build-depends:       base ^>= 4.14.1.0
                     , smart-contracts

executable utils-payment-key-hash
  main-is: utils-payment-key-hash.hs
  hs-source-dirs:      app
  ghc-options:         -Wall
  build-depends:       base ^>= 4.14.1.0
                     , smart-contracts

executable utils-stake-key-hash
  main-is: utils-stake-key-hash.hs
  hs-source-dirs:      app
  ghc-options:         -Wall
  build-depends:       base ^>= 4.14.1.0
                     , smart-contracts



executable pab-api-server
  main-is: pab-api-server.hs
  hs-source-dirs:      app
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       aeson
                     , base ^>= 4.14.1.0
                     , data-default
                     , freer-extras
                     , freer-simple
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-constraints
                     , plutus-pab
                     , plutus-use-cases
                     , text
                     , smart-contracts

executable pab-api-server-auto
  main-is: pab-api-server-auto.hs
  hs-source-dirs:      app
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       aeson
                     , base ^>= 4.14.1.0
                     , data-default
                     , freer-extras
                     , freer-simple
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-constraints
                     , plutus-pab
                     , plutus-use-cases
                     , text
                     , smart-contracts



executable spec
  main-is: Spec.hs
  hs-source-dirs:      test
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       aeson
                     , base ^>= 4.14.1.0
                     , data-default
                     , freer-extras
                     , freer-simple
                     , text



