cabal-version:      2.4
Name:               smart-contracts
Version:            0.1.0.0
Author:              Manuel Padilla
Maintainer:          manuelpad@gmail.com
Build-Type:          Simple
Copyright:           © 2022 Manuel Padilla
License:             Apache-2.0
License-files:       LICENSE

library
  hs-source-dirs:      src
  exposed-modules:     
                      Deploy

                     , Validators.AlwaysTrueV1
                     , Validators.AlwaysTrueV1.OffChain
                     , Validators.AlwaysTrueV1.OnChain
                     , Validators.AlwaysTrueV1.PAB
                     , Validators.AlwaysTrueV1.TestWithEmulator
                     , Validators.AlwaysTrueV1.Typos

                     , Validators.AlwaysFalseV1
                     , Validators.AlwaysFalseV1.OffChain
                     , Validators.AlwaysFalseV1.OnChain
                     , Validators.AlwaysFalseV1.PAB
                     , Validators.AlwaysFalseV1.TestWithEmulator
                     , Validators.AlwaysFalseV1.Typos

                     , Validators.BeneficiaryV1
                     , Validators.BeneficiaryV1.OffChain
                     , Validators.BeneficiaryV1.OnChain
                     , Validators.BeneficiaryV1.PAB
                     , Validators.BeneficiaryV1.TestWithEmulator
                     , Validators.BeneficiaryV1.Typos

                     , Validators.DeadlineV1
                     , Validators.DeadlineV1.OffChain
                     , Validators.DeadlineV1.OnChain
                     , Validators.DeadlineV1.PAB
                     , Validators.DeadlineV1.TestWithEmulator
                     , Validators.DeadlineV1.Typos

                     , Validators.MarketNFTV1
                     , Validators.MarketNFTV1.OffChain
                     , Validators.MarketNFTV1.OnChain
                     , Validators.MarketNFTV1.PAB
                     , Validators.MarketNFTV1.TestWithPABSimulator
                     , Validators.MarketNFTV1.Typos

                    --  , Validators.MarketNFTV2
                    --  , Validators.MarketNFTV2.OffChain
                    --  , Validators.MarketNFTV2.OnChain
                    --  , Validators.MarketNFTV2.PAB
                    --  , Validators.MarketNFTV2.TestWithPABSimulator
                    --  , Validators.MarketNFTV2.Typos


                     , Validators.RedeemerV1
                     , Validators.RedeemerV1.OffChain
                     , Validators.RedeemerV1.OnChain
                     , Validators.RedeemerV1.PAB
                     , Validators.RedeemerV1.TestWithEmulator
                     , Validators.RedeemerV1.Typos
                     
                     , Validators.LockerV1
                     , Validators.LockerV1.OffChain
                     , Validators.LockerV1.OnChain
                     , Validators.LockerV1.PAB
                     , Validators.LockerV1.TestWithEmulator
                     , Validators.LockerV1.Typos

                    --  , Validators.StakeSimpleV1
                    --  , Validators.StakeSimpleV1.OffChain
                    --  , Validators.StakeSimpleV1.OnChain
                    --  , Validators.StakeSimpleV1.OnChainNFT
                    --  , Validators.StakeSimpleV1.PAB
                    --  , Validators.StakeSimpleV1.TestWithEmulator
                    --  , Validators.StakeSimpleV1.TestWithPABSimulator
                    --  , Validators.StakeSimpleV1.Typos
                    --  , Validators.StakeSimpleV1.OnChainHelpers
                    --  , Validators.StakeSimpleV1.OffChainHelpers
                    --  , Validators.StakeSimpleV1.Helpers

                     , Validators.StakePlusV1
                     , Validators.StakePlusV1.OffChain
                     , Validators.StakePlusV1.OnChain
                     , Validators.StakePlusV1.OnChainNFT
                     , Validators.StakePlusV1.PAB
                     , Validators.StakePlusV1.TestWithEmulator
                     , Validators.StakePlusV1.TestWithPABSimulator
                     , Validators.StakePlusV1.Typos
                     , Validators.StakePlusV1.OnChainHelpers
                     , Validators.StakePlusV1.OffChainHelpers
                     , Validators.StakePlusV1.Helpers
                     
                     , MintingPolicies.FreeV1
                     , MintingPolicies.NFTV1
                     , MintingPolicies.SignedV1
                     , MintingPolicies.TokensV1

                     , Utils

  --------------------
  -- Local components
  --------------------
  build-depends:   plutus-script-utils >=1.0.0

  -- --------------------------
  -- -- Other IOG dependencies
  -- --------------------------
  -- build-depends:

  -- ------------------------
  -- -- Non-IOG dependencies
  -- ------------------------
  -- build-depends:
  --   , aeson
  --   , bytestring
  --   , containers
  --   , filepath
  --   , serialise
  --   , strict-containers
  --   , text
  --   , transformers
  --   , transformers-except


  build-depends:
                     --  cardano-api
                    cardano-api             >=1.35
                     --, cardano-cli             >=1.35
                     , cardano-crypto-class
                     , cardano-ledger-core
                     , cardano-ledger-alonzo
                     , cardano-ledger-babbage
                     , cardano-ledger-shelley
                     , cardano-wallet-core
                     , data-default
                     , playground-common
                     -- , plutus-chain-index-core
                     , plutus-contract
                     -- , plutus-core
                     , plutus-ledger
                     --, plutus-ledger-api
                     , plutus-ledger-api       >=1.0.0
                     , plutus-ledger-constraints
                     --, plutus-script-utils
                     , plutus-pab
                     --, plutus-use-cases
                     , plutus-tx               >=1.0.0
                     , plutus-tx-plugin        >=1.0.0 

                        
  

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
                       aeson
                     , base >= 4.9 && < 5
                     , bytestring
                     , containers
                     , freer-extras
                     , freer-simple
                     , filepath
                     -- , hashable
                     , lens
                     , openapi3
                     , prettyprinter
                     -- , semigroups
                     , serialise
                     -- , streaming
                     -- , template-haskell
                     , text
                     , stm 
                     , old-locale
                     , time
                     , directory
                     , MissingH
                    --  , stm , time, old-locale,directory  en test2
                    
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

executable deploy-smart-contracts-manual
  main-is: deploy-smart-contracts-manual.hs
  hs-source-dirs:
      app
  build-depends:
      base ^>=4.14.1.0,
      smart-contracts,
      filepath
  default-language: Haskell2010

executable deploy-smart-contracts-auto
  main-is: deploy-smart-contracts-auto.hs
  hs-source-dirs:
      app
  build-depends:
      base ^>=4.14.1.0,
      smart-contracts,
      filepath
  default-language: Haskell2010


executable utils-token-name
  main-is: utils-token-name.hs
  hs-source-dirs:      app
  ghc-options:         -Wall
  build-depends:       base ^>= 4.14.1.0
                     , smart-contracts

executable utils-payment-key-hash
  main-is: utils-payment-key-hash.hs
  hs-source-dirs:      app
  ghc-options:         -Wall
  build-depends:       base ^>= 4.14.1.0
                     , smart-contracts

executable utils-stake-key-hash
  main-is: utils-stake-key-hash.hs
  hs-source-dirs:      app
  ghc-options:         -Wall
  build-depends:       base ^>= 4.14.1.0
                     , smart-contracts



executable pab-api-server-manual
  main-is: pab-api-server-manual.hs
  hs-source-dirs:      app
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       aeson
                     , base ^>= 4.14.1.0
                     , data-default
                     , freer-extras
                     , freer-simple
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-constraints
                     , plutus-pab
                     --, plutus-use-cases
                     , text
                     , smart-contracts

executable pab-api-server-auto
  main-is: pab-api-server-auto.hs
  hs-source-dirs:      app
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       aeson
                     , base ^>= 4.14.1.0
                     , data-default
                     , freer-extras
                     , freer-simple
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-constraints
                     , plutus-pab
                     --, plutus-use-cases
                     , text
                     , smart-contracts



executable spec
  main-is: Spec.hs
  hs-source-dirs:      test
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       aeson
                     , base ^>= 4.14.1.0
                     , data-default
                     , freer-extras
                     , freer-simple
                     , text



